hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__array_of_structs.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "field",
            IdentId(3) => "number",
            IdentId(4) => "f",
            IdentId(5) => "a",
            IdentId(6) => "core",
            IdentId(7) => "add",
            IdentId(8) => "boolean",
            IdentId(9) => "div",
            IdentId(10) => "eq",
            IdentId(11) => "ge",
            IdentId(12) => "gt",
            IdentId(13) => "le",
            IdentId(14) => "lt",
            IdentId(15) => "mul",
            IdentId(16) => "neg",
            IdentId(17) => "neq",
            IdentId(18) => "sub",
            IdentId(19) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 2:27; [27, 33],
                    bound: Bound(5),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(2),
                    span: 5:21; [96, 101],
                    bound: Bound(21),
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(1),
                    span: 5:17; [92, 93],
                    bound: Bound(3),
                },
            },
            IdentRefId(3) => IdentifierRef {
                id: IdentRefId(3),
                ident: Identifier {
                    id: IdentId(2),
                    span: 6:21; [128, 133],
                    bound: Bound(21),
                },
            },
            IdentRefId(4) => IdentifierRef {
                id: IdentRefId(4),
                ident: Identifier {
                    id: IdentId(1),
                    span: 6:17; [124, 125],
                    bound: Bound(3),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 5:28; [103, 104],
                    },
                ),
                span: 5:28; [103, 104],
                typed: Typed(4),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: StructInstantiation(
                    IdentRefId(2),
                    [
                        (
                            IdentRefId(1),
                            ExprId(0),
                        ),
                    ],
                ),
                span: 5:17; [92, 106],
                typed: Typed(5),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: Number(2),
                        span: 6:28; [135, 136],
                    },
                ),
                span: 6:28; [135, 136],
                typed: Typed(4),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: StructInstantiation(
                    IdentRefId(4),
                    [
                        (
                            IdentRefId(3),
                            ExprId(2),
                        ),
                    ],
                ),
                span: 6:17; [124, 138],
                typed: Typed(5),
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: ArrayInstantiation(
                    [
                        ExprId(1),
                        ExprId(3),
                    ],
                ),
                span: 4:21; [74, 153],
                typed: Typed(11),
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: Block(
                    [
                        StmtId(2),
                        StmtId(5),
                    ],
                ),
                span: 3:17; [52, 164],
                typed: Typed(2),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        bound: Bound(1),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                        StmtId(3),
                        StmtId(4),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(1),
                        span: 2:16; [16, 17],
                        bound: Bound(3),
                    },
                    [],
                    Provided(
                        [
                            Field {
                                identifier: Identifier {
                                    id: IdentId(2),
                                    span: 2:20; [20, 25],
                                    bound: Bound(21),
                                },
                                type_def_id: TypeDefId(0),
                                span: 2:20; [20, 33],
                                typed: Typed(4),
                            },
                        ],
                    ),
                ),
                span: 2:9; [9, 35],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Let(
                    Identifier {
                        id: IdentId(5),
                        span: 4:17; [70, 71],
                        bound: Bound(22),
                    },
                    ExprId(4),
                ),
                span: 4:13; [66, 154],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: LetFn(
                    Identifier {
                        id: IdentId(4),
                        span: 3:13; [48, 49],
                        bound: Bound(20),
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                        typed: Typed(1),
                    },
                    Provided(
                        ExprId(5),
                    ),
                ),
                span: 3:9; [44, 164],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Namespace(
                    Identifier {
                        id: IdentId(6),
                        span: 10:11; [184, 188],
                        bound: Bound(2),
                    },
                    InputId(0),
                    [],
                ),
                span: 10:17; [190, 191],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: Ret(
                    None,
                    Implicit,
                ),
                span: 0:0; [0, 0],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 2:27; [27, 33],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(3),
                        ],
                        IdentId(4): [
                            SymbolId(20),
                        ],
                        IdentId(6): [
                            SymbolId(2),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(6),
                    {
                        IdentId(3): [
                            SymbolId(5),
                        ],
                        IdentId(7): [
                            SymbolId(19),
                        ],
                        IdentId(8): [
                            SymbolId(6),
                        ],
                        IdentId(9): [
                            SymbolId(18),
                        ],
                        IdentId(10): [
                            SymbolId(16),
                            SymbolId(17),
                        ],
                        IdentId(11): [
                            SymbolId(15),
                        ],
                        IdentId(12): [
                            SymbolId(14),
                        ],
                        IdentId(13): [
                            SymbolId(13),
                        ],
                        IdentId(14): [
                            SymbolId(12),
                        ],
                        IdentId(15): [
                            SymbolId(11),
                        ],
                        IdentId(16): [
                            SymbolId(10),
                        ],
                        IdentId(17): [
                            SymbolId(8),
                            SymbolId(9),
                        ],
                        IdentId(18): [
                            SymbolId(7),
                        ],
                        IdentId(19): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Struct(
                    IdentId(1),
                    StmtId(1),
                ),
                type_id: TypeId(5),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(19),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(3),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(8),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: LetFn(
                    IdentId(4),
                    StmtId(3),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(10),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: Field(
                    IdentId(2),
                    StmtId(1),
                    0,
                ),
                type_id: TypeId(4),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: Let(
                    IdentId(5),
                    StmtId(2),
                ),
                type_id: TypeId(11),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Struct(
                StmtId(1),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(10) => Function(
                [],
                TypeId(1),
            ),
            TypeId(11) => Array(
                TypeId(5),
                2,
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(5): [
                    Implicit(
                        None,
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
