hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__array_parameter_wrong_length.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "No function 'f' found for parameters of types (array[3])",
                span: 5:13; [73, 74],
                level: Error,
            },
        ],
        inputs: (),
    },
)
