hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__array_return_type_wrong_base_typee.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Function f expected to return type array[2], got array[2]",
                span: 3:13; [44, 57],
                level: Error,
            },
        ],
        inputs: (),
    },
)
