hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__array_type_1.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected type array[2], got array[3]",
                span: 1:36; [35, 49],
                level: Error,
            },
        ],
        inputs: (),
    },
)
