hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__array_type_2.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected type array[2], got array[2]",
                span: 1:36; [35, 53],
                level: Error,
            },
        ],
        inputs: (),
    },
)
