hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__array_write_access_wrong_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "RHS expected to be of type number, got boolean",
                span: 1:31; [30, 35],
                level: Error,
            },
        ],
        inputs: (),
    },
)
