hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__assignment_always_returning_expr.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "RHS expected to be of type number, got no type",
                span: 1:33; [32, 68],
                level: Error,
            },
        ],
        inputs: (),
    },
)
